--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "dependencies": {
     "electron": "^11.0.1",
     "serialport": "^9.0.2"
+  },
+  "devDependencies": {
+    "electron-rebuild": "^2.3.2"
   }
 }
