--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   "license": "MIT",
   "dependencies": {
     "electron": "^11.0.1",
+    "jquery": "^3.5.1",
     "serialport": "^9.0.2"
   },
   "devDependencies": {
-    "electron-rebuild": "^2.3.2"
+    "electron-rebuild": "^2.3.4"
   }
 }
